# GWAS-target-discovery-engine

./: .gitignore  Makefile  README.md  main.nf  nextflow.config  pyproject.toml  requirements.txt
config/: column_mappings.yaml  fine_mapping.yaml  opentargets.yaml  settings.yaml  structure.yaml  vep.yaml
docs/: README.md  data_dictionary.md  data_lineage.md  fine_mapping.md  methodology.md  phase2_methodology.md  pipeline_architecture.md  project_architecture.md  project_file_guide.md  structural_interpretation.md  target_prioritization.md  vep_annotation.md
modules/: pipeline_processes.nf
results/: README.md
scripts/: README.md  check_output_contracts.py  cleanup_phase2_plots.py  export_for_susie.py  export_for_vep.py  extract_lead_loci.py  fetch_open_targets.py  generate_alphafold_high_confidence_candidates.py  generate_locus_ranking_summary.py  generate_representative_loci_reports.py  integrate_system_layer.py  parse_susie_results.py  parse_vep_results.py  plot_manhattan.py  plot_qq.py  prepare_fine_mapping_inputs.py  prepare_structure_candidates.py  rank_targets.py  reorganize_locus_outputs.py  run_benchmark.sh  run_coloc_representative_loci.py  run_finemap_benchmark.py  run_phase2.py  run_phase2_multi_locus.py  run_pilot_chr7_locus10.sh  run_pipeline.py  run_susie_diagnostics_pilot.R  run_susie_scaffold.py  select_top_loci_chromosomes.py  setup_finemap_docker.sh  susie_run_template.R  terminal_commands_phase2.sh
src/: __init__.py  database.py  export.py  io_utils.py  loci.py  pipeline.py  plotting.py  preprocess.py  qc.py  schema.py
(+49 files in other folders)
