[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ckd-target-discovery"
version = "0.1.0"
description = "Genetics-driven target discovery workflow for CKD using CKDGen eGFR GWAS summary statistics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "polars>=1.5.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.1",
  "duckdb>=1.0.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=16.1.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["src"]
